--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -13,7 +13,7 @@
 
   roles:
     - role: geerlingguy.repo-remi
-      when: ansible_os_family == 'RedHat'
+      when: ansible_facts.os_family == 'RedHat'
     - role: geerlingguy.apache
     - role: geerlingguy.php-versions
     - role: geerlingguy.php
